--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.6",
+    "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "^0.71.3"
+    "react-native": "0.71.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "^0.18.12",
+    "sqlite": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
