--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "^0.18.12",
     "sqlite": "^4.1.2"
   },
